// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Select Custom rendering 1`] = `
<div
  className="sc-cJSrbW gsVfEA"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDownCapture={[Function]}
  tabIndex={0}
>
  <div
    className="sc-hqyNC eDJwPQ"
    disabled={false}
  >
    <div
      className="sc-bwzfXH hUwEHM"
    >
      <div
        className="sc-bwzfXH iSqVrt"
        onClick={[Function]}
      >
        <div
          className="sc-bwzfXH fsbcIX"
        >
          <p
<<<<<<< HEAD
            className="sc-bxivhb kTaguW"
=======
            className="sc-bxivhb jpeJmp"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
          >
            Make a selection
          </p>
        </div>
      </div>
      <button
        className="sc-htoDjs flaPve"
        color={undefined}
        disabled={false}
        id={undefined}
        onClick={[Function]}
        title="open"
        type="button"
      >
        <span
          aria-hidden={true}
          className="sc-iwsKbI MOBcS"
          dangerouslySetInnerHTML={
            Object {
              "__html": "test-file-stub",
            }
          }
          role="img"
        />
      </button>
    </div>
  </div>
  <MockPortal>
    <div
      className="sc-kvZOFW iTUUXu"
    >
      <div
        className="sc-jDwBTQ iGblEK"
      >
        <div
          className="sc-gPEVay fErmnm"
        >
          <div
            data-test="bricks-select-collapse"
            style={
              Object {
                "display": "none",
                "overflow": "hidden",
              }
            }
          >
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <div
                  className="sc-bwzfXH cozIiN"
                >
                  <div
                    className="sc-bwzfXH kcWmUX"
                  >
                    <img
                      src="https://picsum.photos/100/100?image=988"
                    />
                  </div>
                  <div
                    className="sc-bwzfXH bQfpwP"
                  >
                    <p
<<<<<<< HEAD
                      className="sc-bxivhb kFVWeI"
=======
                      className="sc-bxivhb fpMQQD"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
                    >
                      Bar A
                    </p>
                    <p
<<<<<<< HEAD
                      className="sc-bxivhb kTaguW"
=======
                      className="sc-bxivhb jpeJmp"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
                    >
                      Lorem ipsum dolor sit amet.
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <div
                  className="sc-bwzfXH cozIiN"
                >
                  <div
                    className="sc-bwzfXH kcWmUX"
                  >
                    <img
                      src="https://picsum.photos/100/100?image=960"
                    />
                  </div>
                  <div
                    className="sc-bwzfXH bQfpwP"
                  >
                    <p
<<<<<<< HEAD
                      className="sc-bxivhb kFVWeI"
=======
                      className="sc-bxivhb fpMQQD"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
                    >
                      Foo B
                    </p>
                    <p
<<<<<<< HEAD
                      className="sc-bxivhb kTaguW"
=======
                      className="sc-bxivhb jpeJmp"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
                    >
                      Lorem ipsum dolor sit amet.
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <div
                  className="sc-bwzfXH cozIiN"
                >
                  <div
                    className="sc-bwzfXH kcWmUX"
                  >
                    <img
                      src="https://picsum.photos/100/100?image=958"
                    />
                  </div>
                  <div
                    className="sc-bwzfXH bQfpwP"
                  >
                    <p
<<<<<<< HEAD
                      className="sc-bxivhb kFVWeI"
=======
                      className="sc-bxivhb fpMQQD"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
                    >
                      Bar C
                    </p>
                    <p
<<<<<<< HEAD
                      className="sc-bxivhb kTaguW"
=======
                      className="sc-bxivhb jpeJmp"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
                    >
                      Lorem ipsum dolor sit amet.
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <div
                  className="sc-bwzfXH cozIiN"
                >
                  <div
                    className="sc-bwzfXH kcWmUX"
                  >
                    <img
                      src="https://picsum.photos/100/100?image=940"
                    />
                  </div>
                  <div
                    className="sc-bwzfXH bQfpwP"
                  >
                    <p
<<<<<<< HEAD
                      className="sc-bxivhb kFVWeI"
=======
                      className="sc-bxivhb fpMQQD"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
                    >
                      Foo D
                    </p>
                    <p
<<<<<<< HEAD
                      className="sc-bxivhb kTaguW"
=======
                      className="sc-bxivhb jpeJmp"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
                    >
                      Lorem ipsum dolor sit amet.
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <div
                  className="sc-bwzfXH cozIiN"
                >
                  <div
                    className="sc-bwzfXH kcWmUX"
                  >
                    <img
                      src="https://picsum.photos/100/100?image=924"
                    />
                  </div>
                  <div
                    className="sc-bwzfXH bQfpwP"
                  >
                    <p
<<<<<<< HEAD
                      className="sc-bxivhb kFVWeI"
=======
                      className="sc-bxivhb fpMQQD"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
                    >
                      Bar E
                    </p>
                    <p
<<<<<<< HEAD
                      className="sc-bxivhb kTaguW"
=======
                      className="sc-bxivhb jpeJmp"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
                    >
                      Lorem ipsum dolor sit amet.
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <div
                  className="sc-bwzfXH cozIiN"
                >
                  <div
                    className="sc-bwzfXH kcWmUX"
                  >
                    <img
                      src="https://picsum.photos/100/100?image=915"
                    />
                  </div>
                  <div
                    className="sc-bwzfXH bQfpwP"
                  >
                    <p
<<<<<<< HEAD
                      className="sc-bxivhb kFVWeI"
=======
                      className="sc-bxivhb fpMQQD"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
                    >
                      Bar F
                    </p>
                    <p
<<<<<<< HEAD
                      className="sc-bxivhb kTaguW"
=======
                      className="sc-bxivhb jpeJmp"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
                    >
                      Lorem ipsum dolor sit amet.
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </MockPortal>
</div>
`;

exports[`Storyshots Select Default 1`] = `
<div
<<<<<<< HEAD
  className="sc-cJSrbW gsVfEA"
=======
  className="sc-frDJqD knwbUz"
>>>>>>> 4484a45... Added CTA button variant and changed button props (#220)
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDownCapture={[Function]}
  tabIndex={0}
>
  <div
    className="sc-hqyNC eDJwPQ"
    disabled={false}
  >
    <div
      className="sc-bwzfXH hUwEHM"
    >
      <div
        className="sc-bwzfXH iSqVrt"
        onClick={[Function]}
      >
        <p
<<<<<<< HEAD
          className="sc-bxivhb kTaguW"
=======
          className="sc-bxivhb jpeJmp"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
        >
          <span
            className="sc-hmzhuo hgIEwm"
          >
            Search a value
          </span>
        </p>
      </div>
      <button
<<<<<<< HEAD
        className="sc-htoDjs flaPve"
        color={undefined}
=======
        className="sc-gqjmRU gIKjDZ sc-htoDjs ifkBJX"
>>>>>>> 4484a45... Added CTA button variant and changed button props (#220)
        disabled={false}
        id={undefined}
        onClick={[Function]}
        title="open"
        type="button"
      >
        <span
          aria-hidden={true}
          className="sc-iwsKbI MOBcS"
          dangerouslySetInnerHTML={
            Object {
              "__html": "test-file-stub",
            }
          }
          role="img"
        />
      </button>
    </div>
  </div>
  <MockPortal>
    <div
      className="sc-kvZOFW iTUUXu"
    >
      <div
        className="sc-jDwBTQ iGblEK"
      >
        <div
          className="sc-gPEVay fErmnm"
        >
          <div
            data-test="bricks-select-collapse"
            style={
              Object {
                "display": "none",
                "overflow": "hidden",
              }
            }
          >
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <span
                  className="sc-htpNat kTMegb"
                >
<<<<<<< HEAD
                  <span
                    className="sc-ifAKCX cdTTkb"
=======
                  <p
                    className="sc-bxivhb fpMQQD"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
                  >
                    Bar A
                  </p>
                </span>
              </div>
            </div>
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <span
                  className="sc-htpNat kTMegb"
                >
<<<<<<< HEAD
                  <span
                    className="sc-ifAKCX cdTTkb"
=======
                  <p
                    className="sc-bxivhb fpMQQD"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
                  >
                    Foo B
                  </p>
                </span>
              </div>
            </div>
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <span
                  className="sc-htpNat kTMegb"
                >
<<<<<<< HEAD
                  <span
                    className="sc-ifAKCX cdTTkb"
=======
                  <p
                    className="sc-bxivhb fpMQQD"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
                  >
                    Bar C
                  </p>
                </span>
              </div>
            </div>
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <span
                  className="sc-htpNat kTMegb"
                >
<<<<<<< HEAD
                  <span
                    className="sc-ifAKCX cdTTkb"
=======
                  <p
                    className="sc-bxivhb fpMQQD"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
                  >
                    Foo D
                  </p>
                </span>
              </div>
            </div>
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <span
                  className="sc-htpNat kTMegb"
                >
<<<<<<< HEAD
                  <span
                    className="sc-ifAKCX cdTTkb"
=======
                  <p
                    className="sc-bxivhb fpMQQD"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
                  >
                    Bar E
                  </p>
                </span>
              </div>
            </div>
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <span
                  className="sc-htpNat kTMegb"
                >
<<<<<<< HEAD
                  <span
                    className="sc-ifAKCX cdTTkb"
=======
                  <p
                    className="sc-bxivhb fpMQQD"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
                  >
                    Bar F
                  </p>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </MockPortal>
</div>
`;
